# EsoLogParser

./: Cargo.toml  README.md
benchmark/: Cargo.toml
benchmark/benches/: parse_bench.rs
eso_lib/: Cargo.toml
eso_lib/src/: event_iterator.rs  lib.rs  state.rs
eso_lib/src/events/: ability_info.rs  begin_cast.rs  begin_combat.rs  begin_log.rs  begin_trial.rs  combat_event.rs  effect_changed.rs  effect_info.rs  end_cast.rs  end_combat.rs  end_log.rs  end_trial.rs  health_regen.rs  map_info.rs  mod.rs  player_info.rs  trial_init.rs  unit_added.rs  unit_changed.rs  unit_removed.rs  zone_info.rs
eso_lib/src/events/common/: enchant_type.rs  equipment_info.rs  id_new_types.rs  mod.rs  quality.rs  traits.rs  unit_state.rs
eso_parser/: Cargo.toml
eso_parser/src/: lib.rs  number_parser.rs
eso_parser/src/eso_reader/: guarded_reader.rs  mod.rs  unguarded_reader.rs
eso_parser/src/eso_serde/: deserializer.rs  error.rs  mod.rs  newtypes.rs  serializer.rs
