[package]
name = "eso_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
getset = "0.1.2"

eso_parser = { path = "../eso_parser" }
serde = { version = "1.0", features = ["derive"] }
streaming-iterator = { version = "0.1.9", features = ["std"] }
rayon = "1.7.0"
